# talks

./: .gitignore  .gitlab-ci.yml  .nixignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  cmake-wheel.md  conception-orientee-object.md  conception-orientee-objet-forges.md  conception-orientee-objet-intro.md  conception-orientee-objet-outils.md  containers.md  default.nix  flake.nix  ftth.md  git-forges.md  home-manager.md  howto.md  icons.js  index.py  jnrh2023.md  managing-python-packages.md  modern-cmake.md  nim65s_talks_index.py  package.json  pyproject.toml  python-tooling.md  references.bib  robotique-rust.md  rust-rovers.md  tailwind.config.js  template.html  todo  tooling.md  tp-satr.md
.github/workflows/: build.yml  update-flake-lock.yml
pkgs/: css.nix  default.nix  html.nix  index.nix  lock-hash.json  missing-hashes.json  pdfs.nix  talks-css.nix  talks-html.nix  talks-index.nix  talks-pdfs.nix  talks.nix
public/: .gitignore  src
src/talks_index/: __init__.py
talks/: 23-git-forges.md  cmake-wheel.md  conception-orientee-objet-101.md  conception-orientee-objet-forges.md  conception-orientee-objet-intro.md  conception-orientee-objet-outils.md  containers.md  ftth.md  git-forges.md  home-manager.md  howto.md  jnrh2023.md  managing-python-packages.md  modern-cmake.md  nix-rob.md  nix-sources.md  nix.md  packaging.md  python-packaging.md  python-tooling.md  robotique-rust.md  rust-anf.md  rust-hpc.md  rust-intro.md  rust-rovers.md  slides.md  tooling.md  tp-satr.md
